# SmartCalc_CPP

./: Makefile  README.md  docu.html
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/.qt/: QtDeploySupport.cmake
src/controller/: calcController.cc  calcController.h  credController.h  deposController.h
src/model/: credModel.cc  credModel.h  deposModel.h  model.cc  model.h
src/view/: credit.cpp  credit.h  credit.ui  deposit.cpp  deposit.h  deposit.ui  info.cpp  info.h  info.ui  mainwindow.cpp  plotter.cpp  plotter.h  plotter.ui  resource.qrc
src/view/icons/: calc_icn.icns
tests/: tests.cc
